--- a/client/package.json
+++ b/client/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "client",
+  "name": "lol",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "stream-chat": "^5.6.0",
-    "stream-chat-react": "^7.0.0",
+    "stream-chat": "^6.2.0",
+    "stream-chat-react": "^8.0.0",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
@@ -37,9 +38,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
-  "author": "",
-  "license": "ISC"
+  }
 }
