--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
+    "reactjs-popup": "^2.0.5",
     "redux": "^4.1.2",
     "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.5",
